# test-pretty-log

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  change_notes.md  flake.nix
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  runtime.rs
tests/: color.rs  mod.rs  prototype.rs  test_attr_missing.rs  test_attr_sync_inner.rs  test_attr_sync_outer.rs  test_attr_tokio_inner.rs  test_attr_tokio_outer.rs
