[package]
name = "test-pretty-log-macros"
version = "0.6.2"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.61"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/d-e-s-o/test-log.git"
description = """
Supporting procedural macro crate for test-pretty-log.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.32", default-features = false}
quote = {version = "1.0", default-features = false}
syn = {version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"]}
